--- a/style.css
+++ b/style.css
@@ -4,60 +4,70 @@ body{
     background: #777;
     width: 960px;
     font-size: 18px;
+    text-align: center;
+    
+ margin:auto;
 }
 .header{
     text-align: center;
     background: #ebebeb;
-    padding: 50px;
-    width: 100%;
-    margin-left: 25%;
- 
+    border:solid;
+    padding: 30px;
+    margin-top: 10px;
+
+   
+    
 }
 .nav{
-    text-align:center;
+    text-align: center;
     background: #ebebeb;
-    width: 1060px;
-    height: 130px;
-    margin-left: 25%;
+    border: solid;
+    
+    padding: 30px;
 }
-section{
+.section{
     background: #ebebeb;
+    border: solid;
     width: 495px;
-    height: 300px;
-    float: left; 
-    margin-left:25%;  
-    overflow: hidden;
-    text-align: center; 
+    float: left;
+    padding: 20px;
+    text-align:center;
 }
-article{
+.article{
+    border: solid;
     color: #ebebeb;
-    background: #777;
-    outline-offset: 15px;
+    background:#777;
+    text-align: center;
+    padding: 10px;
+    margin-top: 15px;
 }
-aside{
-    background: #ebebeb; 
-    width: 465px;
-    height: 300px;
-    float: right;
-    margin-right: 0px;
-    text-align: Center;
-}
-footer{
+.aside{
     background: #ebebeb;
+    border: solid;
+    float: right;
+    text-align: center;
+    width: 360px;
+    height: 229px;
+    padding: 20px;
+
 }
 
-/* Body
-     * font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-     * color: '#777'
-     * background: '#777'
-     * width: '960px'
-     * font-size: '18px'
-   * Header, Nav, Section, Aside, and Footer
-     * background: '#ebebeb'
-   * Article
-     * color: '#ebebeb',
-     * background: '#777'
-   * h1 and p
-     * color: '#777',
-     * background: '#ebebeb'
-     /*
+h1{
+    border: solid;
+    color: #777;
+    background: #ebebeb;
+    padding: 10px;
+}
+p{
+    border: solid;
+    color: #777;
+    background: #ebebeb;
+    padding: 10px;
+}
+.footer{
+    background: #ebebeb;
+    border: solid;
+    display: block;
+    padding: 30px;
+    margin-top: 32%;
+}
